# spotify-manage

./: .env sample  .gitignore  README.md  copy_stew_leftovers.py  make_someone_another_playlist.json.sample  pyproject.toml  randomise_liked_songs.py  randomise_tracks.py  run_stew.py  run_stew.sh  spotify_database.py  sqlite_wrapper.py
