[tool.poetry]
name = "spotify-manage"
version = "0.1.0"
description = ""
authors = ["Andre <pretorius.dre+github@gmail.com>"]
readme = "README.md"


package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
